--- a/Frontend/News2/new2.html
+++ b/Frontend/News2/new2.html
@@ -40,7 +40,7 @@
         <section class="main-content">
             <h2>Mới Nhất</h2>
             <div class="review-card">
-                <img src="img1.jpg" alt="Poster phim Na Tra 2: Ma Đồng Náo Hải">
+                <img src="..\News2\IMG\Na Tra 2.jpg" alt="Poster phim Na Tra 2: Ma Đồng Náo Hải">
                 <div class="review-info">
                     <h3>Review Na Tra 2: Ma Đồng Náo Hải - Bom tấn hoạt hình đúng nghĩa!</h3>
                     <p class="review-meta">miduynph · 55 phút trước</p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="review-card">
-                <img src="img2.jpg" alt="Poster phim Zombie Cưng Của Ba">
+                <img src="..\News2\IMG\Zombie cưng của ba.jpg" alt="Poster phim Zombie Cưng Của Ba">
                 <div class="review-info">
                     <h3>Review Zombie Cưng Của Ba - Bộ phim lan tỏa hơi ấm và chữa lành</h3>
                     <p class="review-meta">Ivy_Trat · 9 giờ trước</p>
@@ -56,15 +56,15 @@
                 </div>
             </div>
             <div class="review-card">
-                <img src="img3.jpg" alt="Poster phim Năm Oxford Của Tôi">
+                <img src="..\News2\IMG\Conan movie 28.jpg" alt="Poster phim Conan movie 28">
                 <div class="review-info">
-                    <h3>Review Năm Oxford Của Tôi - Chuyện tình đẹp nhưng không chạm được đến trái tim</h3>
+                    <h3>Review Conan Movie 28: Dư Ảnh Của Độc Nhãn - Màn tái xuất đỉnh cao của của ông Mori</h3>
                     <p class="review-meta">linhhuynh0257 · 1 ngày trước</p>
-                    <p>Một thành tích quá ấn tượng cho một phim lãng mạn.</p>
+                    <p>Cốt truyện móc nối nhiều tuyến quan trọng, một câu chuyện vừa ly kỳ vừa giàu cảm xúc.</p>
                 </div>
             </div>
             <div class="review-card">
-                <img src="img4.jpg" alt="Poster phim Mang Mẹ Đi Bỏ">
+                <img src="..\News2\IMG\Mang mẹ đi bỏ.jpg" alt="Poster phim Mang Mẹ Đi Bỏ">
                 <div class="review-info">
                     <h3>Vì sao cái kết của Mang Mẹ Đi Bỏ lại gây tranh cãi dữ dội?</h3>
                     <p class="review-meta">miduynph · 3 ngày trước</p>
