--- a/Frontend/News2/new2.html
+++ b/Frontend/News2/new2.html
@@ -60,7 +60,7 @@
                 <div class="review-info">
                     <h3>Review Conan Movie 28: Dư Ảnh Của Độc Nhãn - Màn tái xuất đỉnh cao của của ông Mori</h3>
                     <p class="review-meta">linhhuynh0257 · 1 ngày trước</p>
-                    <p>Cốt truyện móc nối nhiều tuyến quan trọng, một câu chuyện vừa ly kỳ vừa giàu cảm xúc.</p>
+                    <p>Cốt truyện móc nối nhiều tuyến quan trọng, một câu chuyện vừa ly kỳ vừa giàu cảm xúc trong Conan Movie 28: Dư Ảnh Độc Nhãn.</p>
                 </div>
             </div>
             <div class="review-card">
