--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -224,8 +224,11 @@
         <a href="..\Admin\admin.html"> Admin</a>
     </div>
     <!--Script-->
-    <script src="main.js">
-    </script>
+    <script src="main.js"></script>
+<script src="initCinemaInfoUpdate.js"></script>
+<script src="initDateSelection.js"></script>
+<script src="renderCalendarMovies.js"></script>
+<script src="renderHomepageMovies.js"></script>
 
 
 </body>
