--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -12,35 +12,8 @@
 
 <body>
 <!-- Header -->
-<header class="header">
-    <div class="header__nav__wp">
-        <div class="navbar">
-            <div class="nav__items" style="color: #c86877;">Lotto</div>
+<div id="header-container"></div>
 
-            <div class="nav__items dropdown">
-                <a href="#" class="nav__items-link">Tin tức</a>
-                <div class="dropdown-content">
-                    <a href="..\News1\new1.html">Tin điện ảnh</a>
-                    <a href="..\News2\new2.html">Đánh giá phim</a>
-                </div>
-            </div>
-
-
-            <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
-            </div>
-            <div class="nav__logo"></div>
-            <div class="nav__search">
-                <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
-                <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
-            </div>
-        </div>
-        <div class="nav__login">
-            <i class="fa-regular fa-user nav__login-icon"></i>
-            <span class="nav__login-txt" id="userNameDisplay"></span>
-        </div>
-
-    </div>
-</header>
 <!-- Body -->
 <div class="app">
     <!-- Phim Đang chiếu -->
@@ -217,28 +190,20 @@
         </div>
     </div>
 
-<<<<<<< HEAD
+
 </div>
 
 <!--Footer-->
 <div class="footer__wp">
     <a href="..\Admin\admin.html"> Admin</a>
 </div>
+
 <!--Script-->
-<script src="main.js">
-</script>
-=======
-    <!--Footer-->
-    <div class="footer__wp">
-        <a href="..\Admin\admin.html"> Admin</a>
-    </div>
-    <!--Script-->
-    <script src="main.js"></script>
+<script src="main.js"></script>
 <script src="initCinemaInfoUpdate.js"></script>
 <script src="initDateSelection.js"></script>
 <script src="renderCalendarMovies.js"></script>
 <script src="renderHomepageMovies.js"></script>
->>>>>>> 10ee87ca59209cb5c75dfeeb10e286678654d2aa
 
 
 </body>
