--- a/Frontend/Sign up/giaodien.html
+++ b/Frontend/Sign up/giaodien.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="xulydulieu.js">
 </head>
 <body>
-  
+
+
   <div class="container">
     <h2>Đăng Ký Tài Khoản</h2>
     <form id="registerForm">
@@ -41,6 +42,6 @@
   </div>
 <!--  -->
   
-  <script src="script.js"></script>
+  <script src="../Sign up/xulydulieu.js"></script>
 </body>
 </html>
