--- a/Frontend/Homepage/header.html
+++ b/Frontend/Homepage/header.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 <!-- header.html -->
 <header class="header">
     <div class="header__nav__wp">
         <div class="navbar">
-            <div class="nav__items" style="color: #c86877;">Lotto</div>
+            <div class="nav__items" style="color: #c86877;">
+                <a href="../Homepage/index.html">Lotto</a>
+            </div>
             <div class="nav__items dropdown">
                 <a href="#" class="nav__items-link">Tin tức</a>
                 <div class="dropdown-content">
@@ -17,7 +12,9 @@
                     <a href="../News2/new2.html">Đánh giá phim</a>
                 </div>
             </div>
-            <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a></div>
+            <div class="nav__items">
+                <a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
+            </div>
             <div class="nav__search">
                 <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
                 <input type="search" class="nav__search-items" placeholder="Từ khóa tìm kiếm">
@@ -26,12 +23,13 @@
         <div class="nav__login">
             <i class="fa-regular fa-user nav__login-icon"></i>
             <span class="nav__login-txt">
-                <a id="userNameLink" href="../Sign up/giaodien.html">Login</a>
+                <a id="userNameLink" href="../login/login.html">Login</a>
             </span>
+            <!-- Thêm phần này vào trong <div class="nav__login"> -->
+            <span class="nav__logout-txt">
+    <a id="logoutLink" href="#" style="display: none;">Đăng xuất</a>
+</span>
+
         </div>
     </div>
 </header>
-
-
-</body>
-</html>
