--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -7,24 +7,26 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Đăng nhập</h2>
-        <form action="process_login.php" method="POST">
-            <div class="form-group">
-                <label for="username">Tên đăng nhập</label>
-                <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập" required>
-            </div>
+<!-- Header -->
+<div class="login-container">
+    <h2>Đăng nhập</h2>
+    <form action="process_login.php" method="POST">
+        <div class="form-group">
+            <label for="username">Tên đăng nhập</label>
+            <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập" required>
+        </div>
 
-            <div class="form-group">
-                <label for="password">Mật khẩu</label>
-                <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
-            </div>
+        <div class="form-group">
+            <label for="password">Mật khẩu</label>
+            <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
+        </div>
 
-            <button type="submit" class="btn-login">Đăng nhập</button>
-            <p class="register-link">
-                Chưa có tài khoản? <a href="register.html">Đăng ký</a>
-            </p>
-        </form>
-    </div>
+        <button type="submit" class="btn-login">Đăng nhập</button>
+        <p class="register-link">
+            Chưa có tài khoản? <a href="../Sign up/giaodien.html">Đăng ký</a>
+        </p>
+    </form>
+</div>
+<script src="login.js"></script>
 </body>
 </html>
