--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -3,38 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Trang đăng nhập vào hệ thống quản lý">
-    <meta name="author" content="Tiệm Ăn Zum Zum">
-    <title>Đăng nhập - Tiệm Ăn Zum Zum</title>
+    <title>Đăng nhập</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <!-- Form đăng nhập -->
-    <div class="login-container">
-        <h2>Đăng nhập</h2>
-        <form action="process_login.php" method="POST" autocomplete="off">
-            <fieldset>
-                <div class="form-group">
-                    <label for="username">Tên đăng nhập</label>
-                    <input type="text" id="username" name="username" 
-                           placeholder="Nhập tên đăng nhập" required aria-label="Tên đăng nhập">
-                </div>
+<!-- Header -->
+<div class="login-container">
+    <h2>Đăng nhập</h2>
+    <form action="process_login.php" method="POST">
+        <div class="form-group">
+            <label for="username">Tên đăng nhập</label>
+            <input type="text" id="username" name="username" placeholder="Nhập tên đăng nhập" required>
+        </div>
 
-                <div class="form-group">
-                    <label for="password">Mật khẩu</label>
-                    <input type="password" id="password" name="password" 
-                           placeholder="Nhập mật khẩu" required aria-label="Mật khẩu" autocomplete="new-password">
-                </div>
-            </fieldset>
+        <div class="form-group">
+            <label for="password">Mật khẩu</label>
+            <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
+        </div>
 
-            <button type="submit" class="btn-login">Đăng nhập</button>
-
-            <p class="register-link">
-                Chưa có tài khoản? <a href="../Sign up/giaodien.html">Đăng ký ngay</a>
-            </p>
-        </form>
-    </div>
-
-    <script src="login.js"></script>
+        <button type="submit" class="btn-login">Đăng nhập</button>
+        <p class="register-link">
+            Chưa có tài khoản? <a href="../Sign up/giaodien.html">Đăng ký</a>
+        </p>
+    </form>
+</div>
+<script src="login.js"></script>
 </body>
 </html>
