--- a/Frontend/News1/new1.html
+++ b/Frontend/News1/new1.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tin tức phim</title>
+
   <link rel="stylesheet" href="new1.css">
 </head>
 
@@ -18,82 +19,80 @@
         <div class="nav__items dropdown">
           <a href="#" class="nav__items-link">Tin tức</a>
           <div class="dropdown-content">
-            <a href="../News1/new1.html">Tin điện ảnh</a>
-            <a href="../News2/new2.html">Đánh giá phim</a>
+            <a href="..\News1\new1.html">Tin điện ảnh</a>
+            <a href="..\News2\new2.html">Đánh giá phim</a>
           </div>
         </div>
 
-        <div class="nav__items">
-          <a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
+
+
+        <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
         </div>
-
         <div class="nav__logo"></div>
-
         <div class="nav__search">
           <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
-          <input type="search" class="nav__search-items" placeholder="Từ khóa tìm kiếm">
+          <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
         </div>
       </div>
-
       <div class="nav__login">
         <i class="fa-regular fa-user nav__login-icon"></i>
-        <a href="../Sign up/giaodien.html" class="nav__login-txt">Login</a>
+        <a href="..\Sign up\giaodien.html" class="nav__login-txt">Login</a>
       </div>
     </div>
   </header>
-
   <div class="container">
     <div class="main-content">
+
       <h2>Mới nhất</h2>
 
       <div class="news-item">
-        <img src="img1/MangMeDB.jpg" alt="Mang Mẹ Đi Bỏ">
+      <img src="img1/MangMeDB.jpg.jpg" alt="Mang Mẹ Đi Bỏ">
+
         <div class="info">
           <h3>Mang Mẹ Đi Bỏ phim Gia đình có doanh thu kỉ lục năm 2025 sau Bộ Tứ Báo Thủ</h3>
           <p><strong>Moveek</strong> · 7 giờ trước</p>
-          <p>Mang Mẹ Đi Bỏ đạt 78 tỷ đồng doanh thu, lọt top phim Việt mở màn cao nhất 2025. Phim gia đình đang chứng minh sức hút mạnh mẽ tại phòng vé Việt.</p>
+          <p>Mang Mẹ Đi Bỏ 78 tỷ đồng doanh thu, lọt top phim Việt mở màn cao nhất 2025.Phim gia đình đang chứng minh sức hút mạnh mẽ tại phòng vé Việt.</p>
         </div>
       </div>
 
       <div class="news-item">
-        <img src="img1/Muado.jpg" alt="Mưa Đỏ">
+      <img src="img1/Muado.jpg.jpg" alt="Mưa Đỏ">
+
+
         <div class="info">
           <h3>Mưa Đỏ – Khúc tráng ca bi hùng về Thành cổ Quảng Trị trên màn ảnh rộng</h3>
           <p><strong>miduynph</strong> · 8 giờ trước</p>
-          <p>Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng ở Thành Cổ Quảng Trị, là bản tráng ca xúc động về tinh thần bất khuất của người lính.</p>
+          <p>Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng ở Thành Cổ Quảng Trị,là bản tráng ca xúc động về tinh thần bất khuất của người lính.</p>
         </div>
       </div>
 
       <div class="news-item">
-        <img src="img1/TGDQ.jpg" alt="Thanh Gươm Diệt Quỷ">
+        <img src="img1/TGDQ.jpg.jpg"  alt="Thanh Gươm Diệt Quỷ">
+
         <div class="info">
           <h3>Thanh Gươm Diệt Quỷ: Vô Hạn Thành mở suất chiếu sớm tại Việt Nam từ 14.08.2025</h3>
           <p><strong>Moveek</strong> · 2 ngày trước</p>
-          <p>Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm từ sau 18h ngày 14.08.2025, chính thức ra rạp ngày 15.08. Cập nhật thông tin phim, kỷ lục phòng vé, hậu trường sản xuất và dàn phản diện đình đám.</p>
-        </div>
+          <p>Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm từ sau 18h ngày 14.08.2025,chính thức ra rạp ngày 15.08.Cập nhật thông tin phim,kỷ lục phòng vé,hậu trường sản xuất và dàn phản diện đình đám.</p>
+          </div>2
       </div>
     </div>
 
     <div class="right">
       <div class="menu">
-        <h3>Chuyên Mục</h3>
-        <ul>
-          <li><a href="../News1/new1.html">Tin điện ảnh</a></li>
-          <li><a href="../News2/new2.html">Đánh giá phim</a></li>
-          <li><a href="#">Video - Trailer</a></li>
-        </ul>
-      </div>
+  <h3>Chuyên Mục</h3>
+  <ul>
+   
+</div>
 
-      <div class="menu">
+<div class="menu">
         <h3>Đánh giá phim</h3>
         <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
       </div>
-
+      
       <div class="menu">
         <h3>Tin điện ảnh</h3>
         <p>Tin tức điện ảnh Việt Nam & thế giới</p>
       </div>
-
       <div class="menu">
         <h3>Video - Trailer</h3>
         <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
@@ -101,4 +100,5 @@
     </div>
   </div>
 </body>
+
 </html>
